--- a/src/main/resources/static/css/customer/qna.css
+++ b/src/main/resources/static/css/customer/qna.css
@@ -23,7 +23,7 @@ body {
   flex-direction: row;
   min-height: calc(100vh - 100px); 
   gap: 20px;
-  align-self: stretch; 
+  align-self: stretch;
 }
 
 .mainContent {
@@ -39,24 +39,23 @@ body {
   font-weight: bold;
   margin-bottom: 20px;
   color: #333;
+  padding-left: 20px;
 }
 
 .faq-list {
-  margin-top: 10px;
+  margin: 10px auto;
   padding: 20px;
-  max-width: 600px;
   border: 1px solid #ddd;
   border-radius: 8px;
   background-color: #fff;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
-  gap: 15px; 
-  width: 100%; 
-  cursor: pointer;
+  gap: 15px;
 }
 
 .faq-item {
+  width: 100%;
   border: 1px solid #ddd;
   border-radius: 8px;
   background-color: #fff;
@@ -66,14 +65,14 @@ body {
 
 .faq-header {
   display: flex;
-  justify-content: space-between; /* 제목과 화살표를 양쪽 정렬 */
+  justify-content: space-between;
   align-items: center;
-  padding: 15px;
+  padding: 20px;
   cursor: pointer;
 }
 
 .faq-title {
-  font-size: 16px;
+  font-size: 20px;
   font-weight: bold;
   color: #333;
   margin: 0;
@@ -81,7 +80,7 @@ body {
 }
 
 .faq-arrow {
-  font-size: 18px;
+  font-size: 20px;
   color: #333;
   transition: transform 0.3s ease;
 }
@@ -90,11 +89,11 @@ body {
 
 .faq-content {
   display: none;
-  font-size: 14px;
+  font-size: 19px;
   line-height: 1.6;
   color: #555;
   background-color: #f9f9f9;
-  padding: 10px 15px;
+  padding: 20px;
   border-top: 1px solid #ddd; 
   border-radius: 0 0 8px 8px;
 }
