top 버튼 위치, 슬라이드 타이머 버튼 클릭 시 초기화 되도록 수정, 문의내용 텍스트 스타일에 맞게 보이도록 수정 Quill 에디터 이미지 삽입버튼 삭제

--- a/src/main/resources/templates/customer/inquiryDetail.html
+++ b/src/main/resources/templates/customer/inquiryDetail.html
@@ -31,7 +31,7 @@
             </th:block>
           </p>
         </div>
-        <div class="inquiryDetail-content" th:text="*{queryContent}">
+        <div class="inquiryDetail-content" th:utext="*{queryContent}">
           내용
         </div>
 
