--- a/src/main/resources/static/css/fragments/footer.css
+++ b/src/main/resources/static/css/fragments/footer.css
@@ -68,14 +68,21 @@
 
 /* 맨 위로 이동 버튼 */
 .scroll-to-top {
-  width: 40px; /* 크기 축소 */
+  width: 40px;
   height: 40px;
   position: fixed;
-  bottom: 20px;
-  right: 20px;
+  bottom: 70px;
+  right: 30px;
   z-index: 1000;
   opacity: 0.8;
   transition: opacity 0.3s;
+  background-color: #205375;
+  border: none;
+}
+
+.scroll-to-top:hover {
+  opacity: 1;
+  background-color: #1a4158;
 }
 
 /* 반응형 디자인 */
